compiler/testData/asJava/lightClasses/lightClasses/compilationErrors/ExpectedNestedClassInObject.kt
// p.B.Nested

package p

expect object B {
    class Nested {}
}